Mejoras de responsive en Home & Products

--- a/productos.html
+++ b/productos.html
@@ -106,74 +106,77 @@
     <!-- SUBMENU -->
     <div class="products__menu">
         <ul class="products__menu--category">
-            <li class="products__menu--item"><a href="#">Dormitorio <span class="iconify" data-icon="dashicons:arrow-down" data-inline="false"></span></a>
-                <ul class="products__submenu">
-                    <li class="products__submenu--item"><a href="#">Camas</span></a></li>
-                    <li class="products__submenu--item"><a href="#">Mesas</span></a></li>
-                    <li class="products__submenu--item"><a href="#">Armarios</span></a></li>
-                    <li class="products__submenu--item"><a href="#"> Cabeceras</a></li>
-                    <li class="products__submenu--item"><a href="#">Zapateros</a></li>
-                    <li class="products__submenu--item"><a href="#">Decoración</a></li>
-                    <li class="products__submenu--item"><a href="#"></a></li>
-                </ul>
-            </li>
-            <li class="products__menu--item"><a href="#">Cocina <span class="iconify" data-icon="dashicons:arrow-down" data-inline="false"></span></a>
-                <ul class="products__submenu">
-                    <li class="products__submenu--item"><a href="#">Alacenas</a></li>
-                    <li class="products__submenu--item"><a href="#">Mesas</a></li>
-                    <li class="products__submenu--item"><a href="#">Sillas</a></li>
-                    <li class="products__submenu--item"><a href="#">Taburetes</a></li>
-                    <li class="products__submenu--item"><a href="#">Organizadores</a></li>
-                </ul>
-            </li>
-            <li class="products__menu--item"><a href="#">Living <span class="iconify" data-icon="dashicons:arrow-down" data-inline="false"></span></a>
-                <ul class="products__submenu">
-                    <li class="products__submenu--item"><a href="#">Mesas</a></li>
-                    <li class="products__submenu--item"><a href="#">Racks</a></li>
-                    <li class="products__submenu--item"><a href="#">Bibliotecas</a></li>
-                    <li class="products__submenu--item"><a href="#">Decoración</a></li>
-                    <li class="products__submenu--item"><a href="#">Organizadores</a></li>
-                    <li class="products__submenu--item"><a href="#">Lamparas</a></li>
-                </ul>
-            </li>
-            <li class="products__menu--item"><a href="#">Baño <span class="iconify" data-icon="dashicons:arrow-down" data-inline="false"></span></a>
-                <ul class="products__submenu">
-                    <li class="products__submenu--item"><a href="#">Vanitory</a></li>
-                    <li class="products__submenu--item"><a href="#">Toalleros</a></li>
-                    <li class="products__submenu--item"><a href="#">Decoración</a></li>
-                    <li class="products__submenu--item"><a href="#">Organizadores</a></li>
-                </ul>
-            </li>
-            <li class="products__menu--item"><a href="#">Iluminación <span class="iconify" data-icon="dashicons:arrow-down" data-inline="false"></span></a>
-                <ul class="products__submenu">
-                    <li class="products__submenu--item"><a href="#">Lamparas colgantes</a></li>
-                    <li class="products__submenu--item"><a href="#">Lamparas de pie</a></li>
-                </ul>
-            </li>
-            <li class="products__menu--item"><a href="#">Decoración <span class="iconify" data-icon="dashicons:arrow-down" data-inline="false"></span></a>
-                <ul class="products__submenu">
-                    <li class="products__submenu--item"><a href="#">Estantes</a></li>
-                    <li class="products__submenu--item"><a href="#">Bibliotecas</a></li>
-                    <li class="products__submenu--item"><a href="#">Maceteros</a></li>
-                    <li class="products__submenu--item"><a href="#">Otros</a></li>
-                </ul>
-            </li>
-            <!-- <li class="menuItem"><a href="#">Negocios <span class="iconify" data-icon="dashicons:arrow-down" data-inline="false"></span></a>
-                <ul class="submenu">
-                    <li><a href="#">Mesas</a></li>
-                    <li><a href="#">Sillas</a></li>
-                    <li><a href="#">Mostrador</a></li>
-                    <li><a href="#">Carteles</a></li>
-                    <li><a href="#">Colgantes</a></li>
-                    <li><a href="#">Decoración</a></li>
-                </ul> -->
-            </li>
+                <li class="products__menu--item"><a href="#">Dormitorio <span class="iconify" data-icon="dashicons:arrow-down" data-inline="false"></span></a>
+                    <ul class="products__submenu">
+                        <li class="products__submenu--item"><a href="#">Camas</span></a></li>
+                        <li class="products__submenu--item"><a href="#">Mesas</span></a></li>
+                        <li class="products__submenu--item"><a href="#">Armarios</span></a></li>
+                        <li class="products__submenu--item"><a href="#">Cabeceras</a></li>
+                        <li class="products__submenu--item"><a href="#">Zapateros</a></li>
+                        <li class="products__submenu--item"><a href="#">Decoración</a></li>
+                        <li class="products__submenu--item"><a href="#">Otros</a></li>
+                    </ul>
+                </li>
+                <li class="products__menu--item"><a href="#">Cocina <span class="iconify" data-icon="dashicons:arrow-down" data-inline="false"></span></a>
+                    <ul class="products__submenu">
+                        <li class="products__submenu--item"><a href="#">Alacenas</a></li>
+                        <li class="products__submenu--item"><a href="#">Mesas</a></li>
+                        <li class="products__submenu--item"><a href="#">Sillas</a></li>
+                        <li class="products__submenu--item"><a href="#">Taburetes</a></li>
+                        <li class="products__submenu--item"><a href="#">Organizadores</a></li>
+                        <li class="products__submenu--item"><a href="#">Otros</a></li>
+                    </ul>
+                </li>
+                <li class="products__menu--item"><a href="#">Living <span class="iconify" data-icon="dashicons:arrow-down" data-inline="false"></span></a>
+                    <ul class="products__submenu">
+                        <li class="products__submenu--item"><a href="#">Mesas</a></li>
+                        <li class="products__submenu--item"><a href="#">Racks</a></li>
+                        <li class="products__submenu--item"><a href="#">Bibliotecas</a></li>
+                        <li class="products__submenu--item"><a href="#">Decoración</a></li>
+                        <li class="products__submenu--item"><a href="#">Organizadores</a></li>
+                        <li class="products__submenu--item"><a href="#">Lamparas</a></li>
+                        <li class="products__submenu--item"><a href="#">Otros</a></li>
+                    </ul>
+                </li>
+                <li class="products__menu--item"><a href="#">Baño <span class="iconify" data-icon="dashicons:arrow-down" data-inline="false"></span></a>
+                    <ul class="products__submenu">
+                        <li class="products__submenu--item"><a href="#">Vanitory</a></li>
+                        <li class="products__submenu--item"><a href="#">Toalleros</a></li>
+                        <li class="products__submenu--item"><a href="#">Decoración</a></li>
+                        <li class="products__submenu--item"><a href="#">Percheros</a></li>
+                        <li class="products__submenu--item"><a href="#">Organizadores</a></li>
+                        <li class="products__submenu--item"><a href="#">Otro</a></li>
+                    </ul>
+                </li>
+                <li class="products__menu--item"><a href="#">Iluminación <span class="iconify" data-icon="dashicons:arrow-down" data-inline="false"></span></a>
+                    <ul class="products__submenu">
+                        <li class="products__submenu--item"><a href="#">Lamparas colgantes</a></li>
+                        <li class="products__submenu--item"><a href="#">Lamparas de pie</a></li>
+                        <li class="products__submenu--item"><a href="#">Mesita de luz</a></li>
+                        <li class="products__submenu--item"><a href="#">Apliques</a></li>
+                        <li class="products__submenu--item"><a href="#">Exterior</a></li>
+                        <li class="products__submenu--item"><a href="#">Otros</a></li>
+                    </ul>
+                </li>
+                <li class="products__menu--item"><a href="#">Decoración <span class="iconify" data-icon="dashicons:arrow-down" data-inline="false"></span></a>
+                    <ul class="products__submenu">
+                        <li class="products__submenu--item"><a href="#">Estantes</a></li>
+                        <li class="products__submenu--item"><a href="#">Bibliotecas</a></li>
+                        <li class="products__submenu--item"><a href="#">Macetas</a></li>
+                        <li class="products__submenu--item"><a href="#">Percheros</a></li>
+                        <li class="products__submenu--item"><a href="#">Llaveros</a></li>
+                        <li class="products__submenu--item"><a href="#">Cajas</a></li>
+                        <li class="products__submenu--item"><a href="#">Relojes</a></li>
+                        <li class="products__submenu--item"><a href="#">Otros</a></li>
+                    </ul>
+                </li>
             <li class="products__menu--item"><a href="#">Organización <span class="iconify" data-icon="dashicons:arrow-down" data-inline="false"></span></a>
                 <ul class="products__submenu">
                     <li><a href="#">Estantes</a></li>
                     <li><a href="#">Bibliotecas</a></li>
                     <li><a href="#">Zapateros</a></li>
                     <li><a href="#">Armarios</a></li>
+                    <li><a href="#">Placard</a></li>
                     <li><a href="#">Otros</a></li>
                 </ul>
             </li>
@@ -181,14 +184,17 @@
     </div>
 
     <div class="banner__discount">
-        <p class="text__discount"> Disfrutá los descuentos exclusivos en toda nuestra tienda durante el 1, 2 y 3 de Septimbre</p>
-        <p class="text__discount">-</p>
-        <p class="text__discount">Desde <span class="negrita">60% off</span></p>
+        <p class="text__discount"> Disfrutá los descuentos exclusivos en toda nuestra tienda durante el 6, 7 y 8 de Septimbre</p>
+        <p class="text__discount text__discount--hidden">-</p>
+        <p class="text__discount text__discount--hidden">Desde <span class="negrita">60% off</span></p>
+    </div>
+
+<section class="section">
+    <div class="hero__products">
     </div>
 
     <section class="products__header">
         <h2>Muebles para dormitorios</h2>
-
         <div class="orderby"> 
         <!-- BREADCRUMB -->
             <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
@@ -215,7 +221,7 @@
     <section class="products__section">
         <div class="products__card">
             <div class="products__image" id="prod1">
-                <div class="social">
+                <div class="icons">
                     <a href="#"><span class="iconify" data-icon="fluent:eye-show-12-regular"></span></a>
                     <a href="#"><span class="iconify" data-icon="bi:suit-heart"></span></a>
                 </div>
@@ -230,7 +236,7 @@
 
         <div class="products__card">
             <div class="products__image" id="prod2">
-                <div class="social">
+                <div class="icons">
                     <a href="#"><span class="iconify" data-icon="fluent:eye-show-12-regular"></span></a>
                     <a href="#"><span class="iconify" data-icon="bi:suit-heart"></span></a>
                 </div>
@@ -245,21 +251,26 @@
 
         <div class="products__card">
             <div class="products__image" id="prod3">
-                <div class="social">
+                <div class="icons">
                     <a href="#"><span class="iconify" data-icon="fluent:eye-show-12-regular"></span></a>
                     <a href="#"><span class="iconify" data-icon="bi:suit-heart"></span></a>
                 </div>
             </div>
             <div class="products__text">
                 <h3>Mesa de Luz Nymeria</h3>
-                <span class="products__span">$6.500</span>
+                <div class="products__sale">
+                    <span class="products__oldprice">$6.500</span>
+                    <span class="products__newprice">$4.999</span>
+                </div>
                 <div class="products__btn"><a href="#"><span>Comprar</span></a></div>
+                <div class="badge--sale">Sale</div>
+                <div class="off">25% off</div>
             </div>
         </div>
 
         <div class="products__card">
             <div class="products__image" id="prod4">
-                <div class="social">
+                <div class="icons">
                     <a href="#"><span class="iconify" data-icon="fluent:eye-show-12-regular"></span></a>
                     <a href="#"><span class="iconify" data-icon="bi:suit-heart"></span></a>
                 </div>
@@ -268,16 +279,17 @@
                 <h3>Mesa de Luz Shenzi</h3>
                 <div class="products__sale">
                     <span class="products__oldprice">$13.000</span>
-                    <span class="products__newprice">$8.500</span>
+                    <span class="products__newprice">$8.450</span>
                 </div>
                 <div class="products__btn"><a href="#"><span>Comprar</span></a></div>
                 <div class="badge--sale">Sale</div>
+                <div class="off">35% off</div>
             </div>
         </div>
 
         <div class="products__card">
             <div class="products__image" id="prod5">
-                <div class="social">
+                <div class="icons">
                     <a href="#"><span class="iconify" data-icon="fluent:eye-show-12-regular"></span></a>
                     <a href="#"><span class="iconify" data-icon="bi:suit-heart"></span></a>
                 </div>
@@ -286,16 +298,17 @@
                 <h3>Mesa de Luz Melek</h3>
                 <div class="products__sale">
                     <span class="products__oldprice">$5.200</span>
-                    <span class="products__newprice">$4.799</span>
+                    <span class="products__newprice">$4.699</span>
                 </div>
                 <div class="products__btn"><a href="#"><span>Comprar</span></a></div>
                 <div class="badge--sale">Sale</div>
+                <div class="off">10% off</div>
             </div>
         </div>
 
         <div class="products__card">
             <div class="products__image" id="prod6">
-                <div class="social">
+                <div class="icons">
                     <a href="#"><span class="iconify" data-icon="fluent:eye-show-12-regular"></span></a>
                     <a href="#"><span class="iconify" data-icon="bi:suit-heart"></span></a>
                 </div>
@@ -309,7 +322,7 @@
 
         <div class="products__card">
             <div class="products__image" id="prod7">
-                <div class="social">
+                <div class="icons">
                     <a href="#"><span class="iconify" data-icon="fluent:eye-show-12-regular"></span></a>
                     <a href="#"><span class="iconify" data-icon="bi:suit-heart"></span></a>
                 </div>
@@ -323,7 +336,7 @@
 
         <div class="products__card">
             <div class="products__image" id="prod8">
-                <div class="social">
+                <div class="icons">
                     <a href="#"><span class="iconify" data-icon="fluent:eye-show-12-regular"></span></a>
                     <a href="#"><span class="iconify" data-icon="bi:suit-heart"></span></a>
                 </div>
@@ -337,7 +350,7 @@
 
         <div class="products__card">
             <div class="products__image products__image--agotado" id="prod9">
-                <div class="social">
+                <div class="icons">
                     <a href="#"><span class="iconify" data-icon="fluent:eye-show-12-regular"></span></a>
                     <a href="#"><span class="iconify" data-icon="bi:suit-heart"></span></a>
                 </div>
@@ -352,7 +365,7 @@
 
         <div class="products__card">
             <div class="products__image products__image--agotado" id="prod10">
-                <div class="social">
+                <div class="icons">
                     <a href="#"><span class="iconify" data-icon="fluent:eye-show-12-regular"></span></a>
                     <a href="#"><span class="iconify" data-icon="bi:suit-heart"></span></a>
                 </div>
@@ -367,7 +380,7 @@
 
         <div class="products__card">
             <div class="products__image products__image--agotado" id="prod11">
-                <div class="social">
+                <div class="icons">
                     <a href="#"><span class="iconify" data-icon="fluent:eye-show-12-regular"></span></a>
                     <a href="#"><span class="iconify" data-icon="bi:suit-heart"></span></a>
                 </div>
@@ -417,6 +430,7 @@
             <p>Te ayudamos a crear el espacio ideal para vos</p>
         </div>
     </section>
+</section>
 
 </main>
 
