--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- HEADER -->
     <div class="banner banner__header banner__header--transparent banner__header--scroll">
         <i class="em em-zap" aria-role="presentation" aria-label="HIGH VOLTAGE SIGN"></i>
-        <p>Envíos gratis dentro de CABA &nbsp &nbsp • &nbsp &nbsp Envíos a todo el país  &nbsp &nbsp • &nbsp &nbsp  Hasta 12 cuotas sin interés</p>
+        <p><span>Envíos gratis dentro de CABA &nbsp &nbsp  •</span> &nbsp &nbsp Hasta 30% off  &nbsp &nbsp • &nbsp &nbsp  12 cuotas sin interés</p>
         <i class="em em-zap" aria-role="presentation" aria-label="HIGH VOLTAGE SIGN"></i>
     </div> 
 
@@ -113,7 +113,7 @@
     </header>  
     
     <!-- HERO SECTION -->
-    <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+    <div id="carouselExampleDark" class="hero--lg carousel carousel-dark slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -121,7 +121,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="10000">
-                <img src="images/cliente-diseno2.jpg" class="d-block w-100 hero__img1 img-fluid" alt="carrusel-lampara">
+                <img src="images/cliente-diseno2.jpg" class="d-block hero__img1 img-fluid" alt="carrusel-lampara">
                 <div class="carousel-caption d-none d-md-block">
                 <h1>OLIMPA DESIGN
                 <span>Los mejores productos para tu hogar.</span></h1>
@@ -129,7 +129,7 @@
                 </div>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
-                <img src="images/clientediseno4.jpg" class="d-block w-100 hero__img2 img-fluid" alt="carrusel-nuestrodiseno">
+                <img src="images/clientediseno4.jpg" class="d-block hero__img2 img-fluid" alt="carrusel-nuestrodiseno">
                 <div class="carousel-caption d-none d-md-block" id="cr2">
                 <h5>Armamos tu diseño</h5>
                 <p>Nos encargamos de armar diseños personalizados a medida para vos.</p>
@@ -137,7 +137,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="images/pdprod1.jpg" class="d-block w-100 hero__img3 img-fluid" alt="carrusel-mesa">
+                <img src="images/pdprod1.jpg" class="d-block hero__img3 img-fluid" alt="carrusel-mesa">
                 <div class="carousel-caption d-none d-md-block" id="cr3">
                 <h5>Nuevos lanzamientos</h5>
                 <p>Mirá los nuevos lanzamientos del mes de Julio.</p>
@@ -155,9 +155,11 @@
         </button>
     </div>
 
-    <!-- <div class="hero--sm">
-        <img src="images/cliente-diseno4.jpg" alt="encabezado">
-    </div> -->
+    <div class="hero--sm">
+        <p>Diseñamos</p>
+        <h1>Tus muebles a medida</h1>
+        <a href="productos.html" class="vermas__btn">Ver más</a>
+    </div>
 
 <main>
     <!-- WHATSAPP ICON -->
@@ -195,8 +197,8 @@
         <h2>Nuestros estilos</h2>
         <div class="carousel__estilos">
 
-            <!-- <a href="#content02" class="slider slider__left">&#5130;</a> -->
-            <!-- <a href="#content02" class="slider slider__right">&#5125;</a> -->
+            <a href="#content02" class="slider slider__left">&#5130;</a>
+            <a href="#content02" class="slider slider__right">&#5125;</a>
 
             <div class="carousel__main">
                 <div id="content1" class="content">
@@ -218,7 +220,6 @@
                     <div class="carousel__img">Otro</div>
                 </div>
             </div>
-
         </div>
     </article>
 
@@ -454,8 +455,6 @@
                 </div>
             </article>
     </section>
-
-
 
     <!-- MEDIOS DE PAGO -->
     <section class="methods">
