Creacion de Modal

--- a/contacto.html
+++ b/contacto.html
@@ -101,7 +101,7 @@
 
 <main>
     <!-- WHATSAPP ICON -->
-    <span class="iconify whatsapp" data-icon="logos:whatsapp" data-inline="false" id="whatsapp"></span>
+    <a href="404.html"><span class="iconify whatsapp" data-icon="logos:whatsapp" data-inline="false" id="whatsapp"></span></a>
 
     <section class="contact">
         <h2>Contactate con nosotros</h2>
