--- a/diseno.html
+++ b/diseno.html
@@ -97,11 +97,9 @@
         </nav>
     </header>   
 
-<!-- <hr class="armaTuDiseno"> -->
-
 <main>
     <!-- WHATSAPP ICON -->
-    <span class="iconify whatsapp" data-icon="logos:whatsapp" data-inline="false" id="whatsapp"></span>
+    <a href="404.html"><span class="iconify whatsapp" data-icon="logos:whatsapp" data-inline="false" id="whatsapp"></span></a>
 
     <section class="diseno__section">
         <!-- <article class="armaTuDiseno">
