--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -98,7 +98,7 @@
 
 <main>
     <!-- WHATSAPP ICON -->
-    <span class="iconify whatsapp" data-icon="logos:whatsapp" data-inline="false" id="whatsapp"></span>
+    <a href="404.html"><span class="iconify whatsapp" data-icon="logos:whatsapp" data-inline="false" id="whatsapp"></span></a>
 
     <!-- SOBRE NOSOTROS HERO -->
     <div class="hero__img">
@@ -110,7 +110,6 @@
     </div>
 
     <section class="aboutus">
-
         <article class="aboutus__article container-sm" data-aos="fade-right" data-aos-duration="1000">
 
                 <p class="aboutus__text">Bienvenides, somos Agustina y Daniel, una pareja de emprendedores Argentinos y queremos contarles sobre <span class="marca"> Olimpa Design </span> que nació de nuestro amor por crear ambientes cálidos y modernos a través de diseños con madera. <br>
@@ -126,29 +125,27 @@
                 <div class="aboutus__img" id="aboutus__img2"></div>
         </article>
 
-    <article class="aboutus__article3 container-sm" data-aos="fade-up" data-aos-duration="1000">
-        <h5>¿Qué ofrecemos?</h5>
-        
-        <p class="aboutus__text2">Creemos que el hogar es un lugar sagrado donde deben primar la armonía y calidez al mismo tiempo que refleja nuestra personalidad. Nuestro propósito en <span class="marca">Olimpa Design</span> es crear ambientes modernos y cálidos a través de nuestros materiañes. Te dejamos a continuación una muestra de nuestros modelos realizados especialmente para nuestros clientes:</p>
+        <article class="aboutus__article3 container-sm" data-aos="fade-up" data-aos-duration="1000">
+            <h5>¿Qué ofrecemos?</h5>
+            
+            <p class="aboutus__text2">Creemos que el hogar es un lugar sagrado donde deben primar la armonía y calidez al mismo tiempo que refleja nuestra personalidad. Nuestro propósito en <span class="marca">Olimpa Design</span> es crear ambientes modernos y cálidos a través de nuestros materiañes. Te dejamos a continuación una muestra de nuestros modelos realizados especialmente para nuestros clientes:</p>
 
-    <div>
-    <div class="container">
-        <div class="row">
-            <div class="col-6 colim1"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
-            <div class="col-2 colim2"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
-            <div class="col-3 colim3"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
-        </div>
-        <div class="row">
-            <div class="col-3 colim4"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
-            <div class="col-2 colim5"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
-            <div class="col-6 colim6"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
-        </div>
-    </div>
-</div>
-</article>
-</section>
-<!-- 
-<a href="#" class="formTeam">Formá parte de nuestro equipo</a> -->
+            <div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-6 colim1"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
+                        <div class="col-2 colim2"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
+                        <div class="col-3 colim3"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-3 colim4"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
+                        <div class="col-2 colim5"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
+                        <div class="col-6 colim6"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
+                    </div>
+                </div>
+            </div>
+        </article>
+    </section>
 </main>
 
 <footer>
